The filtering is set up. I need to go set up the mapping next then displaying data to DOM

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<div class="form-signin bg-light">
 			<p id="quote-location">The quote will display here...</p>
 			<select class="w-100 mb-2" id="selected-category" required>
+				<option value="" selected disabled>--Please choose an option--</option>
 				<option value="focus">Focus</option>
 				<option value="learning">Learning</option>
 				<option value="fun">Fun</option>
